--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/JackWKelly/circuit-test#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "circuit-sdk": "^1.2.5201"
   }
 }
